# seedless-agent-wallet

./: .env.example  .gitignore  Anchor.toml  LICENSE  README.md  SKILLS.md  package.json  tsconfig.src.json
docs/: ARCHITECTURE.md
programs/agent-vault/: Cargo.toml
programs/agent-vault/src/: lib.rs
scripts/: demo.sh  deploy.sh
src/agent/: custom-tools.ts  index.ts  policy-engine.ts  wallet-manager.ts
src/cli/: index.ts
src/cli/commands/: create-vault.ts  create-wallet.ts  emergency-stop.ts  fund-wallet.ts  list-wallets.ts  multi-agent.ts  observe.ts  run-agent.ts  set-policy.ts
src/shared/: constants.ts  logger.ts  types.ts
src/vault/: index.ts
tests/: vault.test.ts
