[package]
name = "agent-vault"
version = "0.1.0"
description = "Agentic wallet vault with on-chain policy enforcement"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.31.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
